--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" type="image/jpg" href="images/Logo1.png">
+    <link rel="shortcut icon" type="image/jpg" href="image/Logo1.png">
     <title>E-School-Website</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
 
     <div class="container">
         <nav class="navbar navbar-expand-lg navbar-light">
-            <a class="navbar-brand" href="#"><img src="images/ICON/Logo.png" alt=""></a>
+            <a class="navbar-brand" href="#"><img src="image/Logo.png" alt=""></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -64,7 +64,7 @@
                           <button class="button_in_carousel">Get Sratred→</button>
                       </div>
                       <div class="col-md-6">
-                          <img src="images/Photos/Illustration.png" class="d-block w-100" alt="...">
+                          <img src="image/Illustration.png" class="d-block w-100" alt="...">
                       </div>
                   </div>
               </div>             
@@ -83,23 +83,23 @@
   <div class="container">
   <div class="row align-items-center">
     <div class="col">
-        <img src="images/ICON/book.png" class="img-fluid w-50" alt="responsive">
+        <img src="image/book.png" class="img-fluid w-50" alt="responsive">
         <h4>1500+ Topics</h4>
         <small>Learn Anythings</small>
     </div>
     <div class="col">
-        <img src="images/ICON/Student.png" class="img-fluid w-50" alt="responsive">
+        <img src="image/Student.png" class="img-fluid w-50" alt="responsive">
         <h4>1800+ Students</h4>
         <small>Learn Anythings</small>
     </div>
     <div class="col">
-        <img src="images/ICON/Test.png" class="img-fluid w-50" alt="responsive">
+        <img src="image/Test.png" class="img-fluid w-50" alt="responsive">
         <h4>9k+ Test Token</h4>
         <small>Learn Anythings</small>
 
     </div>
     <div class="col">
-        <img src="images/ICON/Students.png" class="img-fluid w-50" alt="responsive">
+        <img src="image/Students.png" class="img-fluid w-50" alt="responsive">
         <h4>2000+ Students</h4>
         <small>Learn Anythings</small>
     </div>
@@ -111,7 +111,7 @@
 <div class="container"> 
   <div class="card-deck row">
     <div class="col-md-4 card">
-      <img src="images/Photos/Morder pyschology.png" class="card-img-top" alt="...">
+      <img src="image/Morder pyschology.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Modern Psychology</h5>
         <p class="card-text">Designation</p>
@@ -119,18 +119,18 @@
       </div>
       <div class="row">
         <div class="col-md-6 photo">
-          <img src="images/ICON/calendar.png" alt="">
+          <img src="image/calendar.png" alt="">
           <small>Start 20 April, 2021</small>
         </div>
         <div class=" col-md-6 ml-auto footer-photo">
-          <img src="images/ICON/people.png" alt="">
+          <img src="image/ICON/people.png" alt="">
           <small class="text-footer">60 seats</small>
         </div>
   
        </div>
     </div>
     <div class="col-md-4 card">
-      <img src="images/Photos/Morder pychons.png" class="card-img-top" alt="...">
+      <img src="image/Morder pychons.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Modern Psychology</h5>
         <p class="card-text">Designation</p>
@@ -138,18 +138,18 @@
       </div>
       <div class="row">
         <div class="col-md-6 photo">
-          <img src="images/ICON/calendar.png" alt="">
+          <img src="image/calendar.png" alt="">
           <small>Start 20 April, 2021</small>
         </div>
         <div class=" col-md-6 ml-auto footer-photo">
-          <img src="images/ICON/people.png" alt="">
+          <img src="image/people.png" alt="">
           <small class="text-footer">60 seats</small>
         </div>
   
        </div>
     </div>
     <div class="col-md-4 card">
-      <img src="images/Photos/Morder psyc.png" class="card-img-top" alt="...">
+      <img src="image/Morder psyc.png" class="card-img-top" alt="...">
       <div class="card-body">
         <h5 class="card-title">Modern Psychology</h5>
         <p class="card-text">Designation</p>
@@ -157,11 +157,11 @@
       </div>
      <div class="row">
       <div class="col-md-6 photo">
-        <img src="images/ICON/calendar.png" alt="">
+        <img src="image/calendar.png" alt="">
         <small>Start 20 April, 2021</small>
       </div>
       <div class=" col-md-6 ml-auto footer-photo">
-        <img src="images/ICON/people.png" alt="">
+        <img src="image/people.png" alt="">
         <small class="text-footer">60 seats</small>
       </div>
 
@@ -180,7 +180,7 @@
       <div class="d-flex justify-content-between">
           <div class="row  align-items-center">
               <div class="col-md-8">
-                  <img src="images/best.jpg" class="img-fluid w-100" alt="...">
+                  <img src="image/best.jpg" class="img-fluid w-100" alt="...">
                </div>
   
                   <div class="col-md-4">
@@ -211,7 +211,7 @@
   <div class="row  align-items-center">
       <div class="col-md-3"></div>
       <div class="col-md-2">
- <img src="images/Photos/Man.png" class="img-fluid">
+ <img src="image/Man.png" class="img-fluid">
 
       </div>
       <div class="col-md-4">
