--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
           <small>Start 20 April, 2021</small>
         </div>
         <div class=" col-md-6 ml-auto footer-photo">
-          <img src="image/ICON/people.png" alt="">
+          <img src="image/people.png" alt="">
           <small class="text-footer">60 seats</small>
         </div>
   
